More code smells removed